bk_ida/gobmkida/g0/draw_letter_coordinates
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/draw_letter_coordinates/src/engine/showbord.c:620:10: error: use of undeclared identifier 'unk_4DD750'
fwrite( &unk_4DD750, 1uLL, 2uLL, outfile); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/draw_letter_coordinates/src/obj/1/showbord.o] Error 1
